<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="GVL_Devices" Id="{1c4a3623-8d76-4d92-90b8-adf7493881b6}">
    <Declaration><![CDATA[VAR_GLOBAL
	
	// non serial interface
	{attribute 'TcLinkTo':=  '.i_xAtSpd := TIIB[Box 2 (EP2338-0002)]^Channel 1^Input;
							.i_xFaultNC := TIIB[Box 2 (EP2338-0002)]^Channel 2^Input;
							.q_PumpingStation := TIIB[Box 7 (EP2624-0002)]^Channel 1^Output'}

	PTM : FB_PTM_Pfeiffer;
	
	(*Pfeiffer*)
	// They share the same serial port
	st_Pfeiffer_CTRL 			: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK 			: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom : FB_PFEIFFER_COM;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>