<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="PRG_COM" Id="{43613b77-711f-416f-9f17-962c1eb795b0}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_COM
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//needs to run on a seperate task
//PTM_01
(*Instanitate Serial port com function *) 
fbSerialLineControl(
	Mode:= SERIALLINEMODE_EL6_22B,
	pComIn:= ADR(stComIn),
	pComOut:=ADR(stComOut),
	SizeComIn:= SIZEOF(stComIn),
	TxBuffer:= SerialRXBuffer,
	RxBuffer:= SerialTXBuffer,
	Error=> ,
	ErrorID=> );
	
(*
//PTM_02 and PTM_03
(*Instanitate Serial port com function *) 
E2_fbSerialLineControl(
	Mode:= SERIALLINEMODE_EL6_22B,
	pComIn:= ADR(E2_stComIn),
	pComOut:=ADR(E2_stComOut),
	SizeComIn:= SIZEOF(E2_stComIn),
	TxBuffer:= E2_SerialRXBuffer,
	RxBuffer:= E2_SerialRXBuffer,
	Error=> ,
	ErrorID=> );*)
	]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>