<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="MAIN" Id="{58b6a02f-f62c-4356-9f14-4366907348e7}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
{attribute 'TcLinkTo' := 'TIIB[Box 7 (EP2624-0002)]^Channel 1^Output'}	
x_PumpStation AT %Q*	:	BOOL;
{attribute 'TcLinkTo' := 'TIIB[Box 7 (EP2624-0002)]^Channel 2^Output'}
x_ErrorReset AT %Q*	:	BOOL;
{attribute 'TcLinkTo' := 'TIIB[Box 2 (EP2338-0002)]^Channel 1^Input'}
x_AtSpeed AT %I*	:	BOOL;
{attribute 'TcLinkTo' := 'TIIB[Box 2 (EP2338-0002)]^Channel 2^Input'}
x_FaultNC AT %I*	:	BOOL;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Pfeiffer Turbo
(* Instanitate the Function block for Pump Control*)
PTM(i_xExtIlkOK:= TRUE , iq_stPTM=> );

(*Assign adresses to the pfeiffer controllers connected to this serial terminal*)
st_Pfeiffer_CTRL[1].iSerialAddress :=1;
st_Pfeiffer_CTRL[1].xEnableComm := TRUE;
	
(* Instanitate the Function block for serial communication with Pfeiffer*)	
fb_PfeifferCom(astPfeifferControl := st_Pfeiffer_CTRL,
			   astPfeifferStatus:= st_Pfeiffer_RBK,
				SerialRXBuffer:= E2_SerialRXBuffer,
				SerialTXBuffer:= E2_SerialTXBuffer);
				

(* Copy Status Pv's into the PTM structure*)
PTM.M_Serial_IO(st_Pfeiffer_CTRL[1],st_Pfeiffer_RBK[1]);
	

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>